add challenger java-basic

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ replay_pid*
 type-variables/.vscode/settings.json
 assignment-operators/.vscode/settings.json
 smart-tv-ex/.vscode/settings.json
+challenger-java/.vscode/settings.json
