--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ type-variables/.vscode/settings.json
 assignment-operators/.vscode/settings.json
 smart-tv-ex/.vscode/settings.json
 challenger-java/.vscode/settings.json
+rep build (for,while,do while)/.vscode/settings.json
