--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ assignment-operators/.vscode/settings.json
 smart-tv-ex/.vscode/settings.json
 challenger-java/.vscode/settings.json
 rep build (for,while,do while)/.vscode/settings.json
+excercios unip/exercios/.vscode/settings.json
