--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ smart-tv-ex/.vscode/settings.json
 challenger-java/.vscode/settings.json
 rep build (for,while,do while)/.vscode/settings.json
 excercios unip/exercios/.vscode/settings.json
+java-update-study/.vscode/settings.json
